# api/routes.go
@@ -26,8 +26,6 @@ func SetupRoutes() *gin.Engine {
 	router.GET("/verify-email", auth.VerifyEmailHandler)
 	router.POST("/password-reset", auth.SendPasswordResetEmailHandler)
 	router.POST("/resend-verification", auth.ResendVerificationEmailHandler)
-	router.GET("/usuarios/:uid", auth.GetUsuariouid)
-	router.GET("/get-allusuario", auth.GetAllUsuarios)
 
 	// Rutas protegidas
 	protected := router.Group("/").Use(auth.AuthMiddleware) // Agrupar las rutas protegidas con el middleware
